Realizado o import do bootstrap.less e criada a estrutura HTML basica da pagina (sem as classes)

--- a/dev/index.html
+++ b/dev/index.html
@@ -15,6 +15,221 @@
   <![endif]-->
 </head>
 <body>
+
+<div id="wrapper">
+  
+  <nav class="ms-nav">
+    <a href="#">{Bootstrap Less}</a>
+    <ul>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Team</a></li>
+      <li><a href="#">Pricing</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav><!-- .ms-nav -->
+
+  <header class="ms-header" role="banner">
+    <h1>Bootstrap with Less</h1>
+    <h2>Beautiful and Responsive</h2>
+    <p>Learning the functioning of the Bootstrap with Less.</p>
+    <a href="#">Github</a>
+  </header><!-- .ms-header -->
+
+  <section class="ms-container" id="about">
+    <div>
+      <h2>About</h2>
+      <h3>{Bootstrap Less} template.</h3>
+    </div>
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce augue felis, aliquet id nunc vel, pulvinar elementum nulla. Vivamus venenatis nisl vulputate, fermentum leo gravida, eleifend tortor. Morbi varius interdum justo, quis maximus elit tincidunt id. Maecenas pulvinar velit at nunc volutpat fringilla sit amet at nisl. Pellentesque nec augue fringilla dolor pulvinar mattis. Curabitur laoreet lectus nisi, id auctor metus aliquet eget. Morbi vitae leo in diam vestibulum sodales. Aliquam cursus, tellus sed auctor feugiat, lacus sem sagittis arcu, nec faucibus justo nisl nec dolor. Sed et felis ut urna molestie lobortis vel scelerisque libero. Donec blandit tellus enim, sed iaculis velit rutrum sed. Nunc consectetur sit amet odio et maximus. Praesent laoreet leo ut lorem tempus convallis. Morbi bibendum ipsum ut libero convallis pharetra vel vitae est. Aenean ultricies tristique tellus, nec finibus tellus porttitor vitae. Integer non nulla dolor. Donec augue felis, aliquet ut velit ut, ultrices fermentum sem.
+      </p>
+      <img src="http://placehold.it/350x250" alt="About image">
+    </div>
+  </section><!-- #about -->
+
+  <section class="ms-container" id="services">
+    <div>
+      <h2>Services</h2>
+      <h3>Your business skills here.</h3>
+    </div>
+    <div>
+      <div>
+        <h2>Strategy</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at.</p>
+      </div>
+      <div>
+        <h2>Social</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at.</p>
+      </div>
+      <div>
+        <h2>Design</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at.</p>
+      </div>
+      <div>
+        <h2>Development</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at.</p>
+      </div>
+    </div>
+  </section><!-- #services -->
+
+  <section class="ms-container" id="portfolio">
+    <div>
+      <h2>Portfolio</h2>
+      <h3>Your portfolio images here.</h3>
+    </div>
+    <div>
+      <ul>
+        <li><img src="http://placehold.it/350x350" alt="Portfolio image 1"></li>
+        <li><img src="http://placehold.it/350x350" alt="Portfolio image 2"></li>
+        <li><img src="http://placehold.it/350x350" alt="Portfolio image 3"></li>
+        <li><img src="http://placehold.it/350x350" alt="Portfolio image 4"></li>
+        <li><img src="http://placehold.it/350x350" alt="Portfolio image 5"></li>
+        <li><img src="http://placehold.it/350x350" alt="Portfolio image 6"></li>
+      </ul>
+    </div>
+  </section><!-- #portfolio -->
+
+  <section class="ms-container" id="team">
+    <div>
+      <h2>Team</h2>
+      <h3>Your team here.</h3>
+    </div>
+    <div>
+      <div>
+        <figure>
+          <img src="http://placehold.it/250x250" alt="John Smith">
+        </figure>
+        <h2>John Smith</h2>
+        <p>Director</p>
+      </div>
+      <div>
+        <figure>
+          <img src="http://placehold.it/250x250" alt="John Smith">
+        </figure>
+        <h2>John Smith</h2>
+        <p>Developer</p>
+      </div>
+      <div>
+        <figure>
+          <img src="http://placehold.it/250x250" alt="John Smith">
+        </figure>
+        <h2>John Smith</h2>
+        <p>Designer</p>
+      </div>
+      <div>
+        <figure>
+          <img src="http://placehold.it/250x250" alt="John Smith">
+        </figure>
+        <h2>John Smith</h2>
+        <p>Social Media</p>
+      </div>
+    </div>
+  </section><!-- #team -->
+
+  <section class="ms-container" id="pricing">
+    <div>
+      <h2>Pricing</h2>
+      <h3>Pricing plans for personal and commercial projects.</h3>
+    </div>
+    <div>
+      <div>
+        <h2>Starter</h2>
+        <h3>$10/mo</h3>
+        <ul>
+          <li>Lorem ipsum dolor sit amet.</li>
+          <li>Lorem ipsum dolor sit amet.</li>
+          <li>Lorem ipsum dolor sit amet.</li>
+          <li>Lorem ipsum dolor sit amet.</li>
+        </ul>
+        <a href="#">Purchase</a>
+      </div>
+      <div>
+        <h2>Basic</h2>
+        <h3>$20/mo</h3>
+        <ul>
+          <li>Lorem ipsum dolor sit amet.</li>
+          <li>Lorem ipsum dolor sit amet.</li>
+          <li>Lorem ipsum dolor sit amet.</li>
+          <li>Lorem ipsum dolor sit amet.</li>
+        </ul>
+        <a href="#">Purchase</a>
+      </div>
+      <div>
+        <h2>Premium</h2>
+        <h3>$30/mo</h3>
+        <ul>
+          <li>Lorem ipsum dolor sit amet.</li>
+          <li>Lorem ipsum dolor sit amet.</li>
+          <li>Lorem ipsum dolor sit amet.</li>
+          <li>Lorem ipsum dolor sit amet.</li>
+        </ul>
+        <a href="#">Purchase</a>
+      </div>
+    </div>
+  </section><!-- #pricing -->
+
+  <section class="ms-container" id="contact">
+    <div>
+      <h2>Contact</h2>
+      <h3>Still Got Any Questions?</h3>
+    </div>
+    <div>
+      <form>
+        <label for="name">Name:</label><input type="text" name="name">
+        <label for="email">Email:</label><input type="text" name="email">
+        <label for="phone">Phone:</label><input type="text" name="phone">
+        <label for="message">Message:</label><textarea name="message"></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </div>
+  </section><!-- #contact -->
+
+  <footer class="ms-footer" role="contentinfo">
+    <section>
+      <div>
+        <h4>About</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed orci euismod, sollicitudin ante nec, sagittis quam. Cras at elit.</p>
+        <p>
+          Phone: +00 00 0000 0000<br>
+          Fax: +00 00 0000 0000
+        </p>
+        <p>Email: support@example.com</p>
+      </div>
+      <div>
+        <h4>Menu</h4>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Social</h4>
+        <ul>
+          <li><a href="#">Linkedin</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Youtube</a></li>
+        </ul>
+      </div>
+      <div>
+        <p>Sign up for the newsletter and we'll inform you of updates, offers and more.</p>
+        <input type="text" placeholder="Your email address">
+        <button type="submit">Sign up</button>
+      </div>
+    <section>
+    <section>
+      Copyright 2015 {Bootstrap Less}. All Rights Reserved.
+    </section>
+  </footer><!-- .ms-footer -->
+
+</div><!-- #wrapper -->
   
 </body>
 </html>
