--- a/dev/index.html
+++ b/dev/index.html
@@ -18,16 +18,29 @@
 
 <div id="wrapper">
   
-  <nav class="ms-nav">
-    <a href="#">{Bootstrap Less}</a>
-    <ul>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Team</a></li>
-      <li><a href="#">Pricing</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+  <nav class="ms-nav navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-items">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <a href="#" class="navbar-brand">{Bootstrap Less}</a>
+      </div>
+      <div class="collapse navbar-collapse" id="navbar-items">
+        <ul class="nav navbar-nav">
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
   </nav><!-- .ms-nav -->
 
   <header class="ms-header" role="banner">
@@ -230,6 +243,11 @@
   </footer><!-- .ms-footer -->
 
 </div><!-- #wrapper -->
+
+<!-- Scripts -->
+<script src="assets/components/jquery/dist/jquery.min.js"></script>
+<script src="assets/components/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- End Scripts -->
   
 </body>
 </html>
