Header, About e Services inseridos nos padroes Bootstrap

--- a/dev/index.html
+++ b/dev/index.html
@@ -45,44 +45,52 @@
 
   <header class="ms-header" role="banner">
     <h1>Bootstrap with Less</h1>
-    <h2>Beautiful and Responsive</h2>
+    <h2><small>Beautiful and Responsive</small></h2>
     <p>Learning the functioning of the Bootstrap with Less.</p>
     <a href="#">Github</a>
   </header><!-- .ms-header -->
 
   <section class="ms-container" id="about">
-    <div>
+    <div class="box-title">
       <h2>About</h2>
       <h3>{Bootstrap Less} template.</h3>
     </div>
-    <div>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce augue felis, aliquet id nunc vel, pulvinar elementum nulla. Vivamus venenatis nisl vulputate, fermentum leo gravida, eleifend tortor. Morbi varius interdum justo, quis maximus elit tincidunt id. Maecenas pulvinar velit at nunc volutpat fringilla sit amet at nisl. Pellentesque nec augue fringilla dolor pulvinar mattis. Curabitur laoreet lectus nisi, id auctor metus aliquet eget. Morbi vitae leo in diam vestibulum sodales. Aliquam cursus, tellus sed auctor feugiat, lacus sem sagittis arcu, nec faucibus justo nisl nec dolor. Sed et felis ut urna molestie lobortis vel scelerisque libero. Donec blandit tellus enim, sed iaculis velit rutrum sed. Nunc consectetur sit amet odio et maximus. Praesent laoreet leo ut lorem tempus convallis. Morbi bibendum ipsum ut libero convallis pharetra vel vitae est. Aenean ultricies tristique tellus, nec finibus tellus porttitor vitae. Integer non nulla dolor. Donec augue felis, aliquet ut velit ut, ultrices fermentum sem.
-      </p>
-      <img src="http://placehold.it/350x250" alt="About image">
+    <div class="box-content">
+      <div class="paragraph">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce augue felis, aliquet id nunc vel, pulvinar elementum nulla. Vivamus venenatis nisl vulputate, fermentum leo gravida, eleifend tortor. Morbi varius interdum justo, quis maximus elit tincidunt id. Maecenas pulvinar velit at nunc volutpat fringilla sit amet at nisl. Pellentesque nec augue fringilla dolor pulvinar mattis. Curabitur laoreet lectus nisi, id auctor metus aliquet eget. Morbi vitae leo in diam vestibulum sodales. Aliquam cursus, tellus sed auctor feugiat, lacus sem sagittis arcu, nec faucibus justo nisl nec dolor. Sed et felis ut urna molestie lobortis vel scelerisque libero. Donec blandit tellus enim, sed iaculis velit rutrum sed. Nunc consectetur sit amet odio et maximus. Praesent laoreet leo ut lorem tempus convallis. Morbi bibendum ipsum ut libero convallis pharetra vel vitae est. Aenean ultricies tristique tellus, nec finibus tellus porttitor vitae. Integer non nulla dolor. Donec augue felis, aliquet ut velit ut, ultrices fermentum sem.
+        </p>
+      </div>
+      <div class="image">
+        <img src="http://placehold.it/350x250" alt="About image">
+      </div>
     </div>
   </section><!-- #about -->
 
   <section class="ms-container" id="services">
-    <div>
+    <div class="box-title">
       <h2>Services</h2>
       <h3>Your business skills here.</h3>
     </div>
-    <div>
-      <div>
-        <h2>Strategy</h2>
+    <div class="box-content">
+      <div class="item">
+        <span class="glyphicon-blackboard"></span>
+        <h4>Strategy</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at.</p>
       </div>
-      <div>
-        <h2>Social</h2>
+      <div class="item">
+        <span class="glyphicon-user"></span>
+        <h4>Social</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at.</p>
       </div>
-      <div>
-        <h2>Design</h2>
+      <div class="item">
+        <span class="glyphicon-picture"></span>
+        <h4>Design</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at.</p>
       </div>
-      <div>
-        <h2>Development</h2>
+      <div class="item">
+        <span class="glyphicon-phone"></span>
+        <h4>Development</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at.</p>
       </div>
     </div>
