Profile e Team inseridos nos padroes Bootstrap

--- a/dev/index.html
+++ b/dev/index.html
@@ -97,11 +97,11 @@
   </section><!-- #services -->
 
   <section class="ms-container" id="portfolio">
-    <div>
+    <div class="box-title">
       <h2>Portfolio</h2>
       <h3>Your portfolio images here.</h3>
     </div>
-    <div>
+    <div class="box-content">
       <ul>
         <li><img src="http://placehold.it/350x350" alt="Portfolio image 1"></li>
         <li><img src="http://placehold.it/350x350" alt="Portfolio image 2"></li>
@@ -114,37 +114,37 @@
   </section><!-- #portfolio -->
 
   <section class="ms-container" id="team">
-    <div>
+    <div class="box-title">
       <h2>Team</h2>
       <h3>Your team here.</h3>
     </div>
-    <div>
-      <div>
+    <div class="box-content">
+      <div class="item">
         <figure>
           <img src="http://placehold.it/250x250" alt="John Smith">
         </figure>
-        <h2>John Smith</h2>
+        <h4>John Smith</h4>
         <p>Director</p>
       </div>
-      <div>
+      <div class="item">
         <figure>
           <img src="http://placehold.it/250x250" alt="John Smith">
         </figure>
-        <h2>John Smith</h2>
+        <h4>John Smith</h4>
         <p>Developer</p>
       </div>
-      <div>
+      <div class="item">
         <figure>
           <img src="http://placehold.it/250x250" alt="John Smith">
         </figure>
-        <h2>John Smith</h2>
+        <h4>John Smith</h4>
         <p>Designer</p>
       </div>
-      <div>
+      <div class="item">
         <figure>
           <img src="http://placehold.it/250x250" alt="John Smith">
         </figure>
-        <h2>John Smith</h2>
+        <h4>John Smith</h4>
         <p>Social Media</p>
       </div>
     </div>
