Inserido o plugin ScrollSpy do Bootstrap

--- a/dev/index.html
+++ b/dev/index.html
@@ -14,7 +14,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-<body>
+<body data-spy="scroll" data-target=".ms-nav">
 
 <div id="wrapper">
   
@@ -272,6 +272,7 @@
 <!-- Scripts -->
 <script src="assets/components/jquery/dist/jquery.min.js"></script>
 <script src="assets/components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="assets/scripts/main.js"></script>
 <!-- End Scripts -->
   
 </body>
