--- a/dev/index.html
+++ b/dev/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Learn | Bootstrap with Less</title>
-
+  <!-- build:css assets/stylesheets/style.min.css -->
   <link rel="stylesheet" href="assets/stylesheets/style.css">
+  <!-- /build -->
 
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -270,9 +271,15 @@
 </div><!-- #wrapper -->
 
 <!-- Scripts -->
+<!-- build:js assets/scripts/vendor/jquery/jquery.min.js -->
 <script src="assets/components/jquery/dist/jquery.min.js"></script>
+<!-- /build -->
+<!-- build:js assets/scripts/vendor/bootstrap/bootstrap.min.js -->
 <script src="assets/components/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- /build -->
+<!-- build:js assets/scripts/main.min.js -->
 <script src="assets/scripts/main.js"></script>
+<!-- /build -->
 <!-- End Scripts -->
   
 </body>
