Adicionado o link do Github do projeto

--- a/dev/index.html
+++ b/dev/index.html
@@ -48,7 +48,7 @@
     <h1>Bootstrap with Less</h1>
     <h2><small>Beautiful and Responsive</small></h2>
     <p>Learning the functioning of the Bootstrap with Less.</p>
-    <a href="#">Github</a>
+    <a href="https://github.com/silvaleonardo/learn-bootstrap-less">Github</a>
   </header><!-- .ms-header -->
 
   <section class="ms-container" id="about">
